--- a/common-core/ms1/ft_printf/Makefile
+++ b/common-core/ms1/ft_printf/Makefile
@@ -8,6 +8,7 @@ LIBS = $(ETC)/stdlibs
 PRNT = $(ETC)/printers
 
 LMAIN = __loc_main.c
+LMAIN = usr_tests.c
 
 # ------------- #
 
@@ -57,6 +58,8 @@ run: lmain $(NAME)
 	@echo '|-----TEST-----|'
 	@echo
 
+test: $(NAME)
+
 debug: $(NAME) # run
 	cc $(CFLAGS) -fsanitize=address -g -ggdb3 -o main_test.out $(LMAIN) $(NAME)
 	@make clean
@@ -73,6 +76,11 @@ lmain: $(LMAIN)
 
 $(LMAIN):
 	@curl -o $(LMAIN) 'https://raw.githubusercontent.com/maloryware/42-remote/refs/heads/main/common-core/ms1/ft_printf/__loc_main.c'
+
+tmain: $(TMAIN)
+
+$(TMAIN):
+	@curl -o $(TMAIN) 'https://raw.githubusercontent.com/maloryware/42-remote/refs/heads/main/common-core/ms1/ft_printf/usr_tests.c'
 
 clean:
 	@rm -f $(OBJ)
