--- a/common-core/ms1/ft_printf/Makefile
+++ b/common-core/ms1/ft_printf/Makefile
@@ -8,7 +8,7 @@ LIBS = $(ETC)/stdlibs
 PRNT = $(ETC)/printers
 
 LMAIN = __loc_main.c
-TMAIN = usr_tests.c
+TMAIN = __usr_tests.c
 
 # ------------- #
 
@@ -47,33 +47,33 @@ list: $(NAME)
 	@ar -t $(NAME) | sed 's/\.o/.c/g' | awk '{print "#include \"" $$1 "\""}'
 
 run: lmain $(NAME)
-	$(CC) $(CFLAGS) -o main_test.out $(LMAIN) $(NAME)
+	$(CC) $(CFLAGS) -o test_main.out $(LMAIN) $(NAME)
 	@make clean
 	@echo 
 	@echo '|-----TEST-----|'
 	@echo 
-	@./main_test.out
+	@./test_main.out
 	@echo
 	@echo
 	@echo '|-----TEST-----|'
 	@echo
 
 test: $(NAME) tmain
-	cc $(CFLAGS) -fsanitize=address -g -ggdb3 -o usr_tests.out $(TMAIN) $(NAME)
+	cc $(CFLAGS) -fsanitize=address -g -ggdb3 -o test_usr.out $(TMAIN) $(NAME)
 	@make clean
-	@./usr_tests.out
+	@./test_usr.out
 
 debug: $(NAME) run
-	cc $(CFLAGS) -fsanitize=address -g -ggdb3 -o main_test.out $(LMAIN) $(NAME)
+	cc $(CFLAGS) -fsanitize=address -g -ggdb3 -o test_main.out $(LMAIN) $(NAME)
 	@make clean
-	@$(VALGRIND) ./main_test.out
+	@$(VALGRIND) ./test_main.out
 	@echo
 	@echo
 	@echo
 	@echo
 	@echo
 	@echo
-	@./main_test.out
+	@./test_main.out
 
 lmain: $(LMAIN)
 
@@ -83,13 +83,13 @@ $(LMAIN):
 tmain: $(TMAIN)
 
 $(TMAIN):
-	@curl -o $(TMAIN) 'https://raw.githubusercontent.com/maloryware/42-remote/refs/heads/main/common-core/ms1/ft_printf/usr_tests.c'
+	@curl -o $(TMAIN) 'https://raw.githubusercontent.com/maloryware/42-remote/refs/heads/main/common-core/ms1/ft_printf/__usr_tests.c'
 
 clean:
 	@rm -f $(OBJ)
 
 fclean: clean
-	@rm -f $(NAME) $(TMAIN) $(LMAIN) main_test.out usr_tests.out
+	@rm -f $(NAME) $(TMAIN) $(LMAIN) test_usr.out test_main.out
 
 re: fclean all
 
